--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,10 +3,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <link rel="stylesheet" type="text/css" href="../../node_modules/bootstrap/dist/css/bootstrap.css"/>
     <title>Cat Fight</title>
   </head>
   <body>
-    <div id="app" />
+    <div id="login"/>
+    <script src="../../node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
     <script src="public/bundle.js" type="text/javascript"></script>
   </body>
 </html>
