--- a/src/client/index.html
+++ b/src/client/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app" />
-    
+    <canvas id="myChart" width="400" height="400"></canvas>
     <script src="/config/config.js" type="text/javascript"></script>
     <script src="/node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
