--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="styles.css"/>
-    <title>Cat Fight</title>
+    <title>Math Dojo</title>
   </head>
   <body>
     <div id="app" />
