--- a/client/index.html
+++ b/client/index.html
@@ -8,13 +8,15 @@
     <title>Math Dojo</title>
   </head>
   <body>
-    <div id="app" />
-    <canvas id="myChart" width="400" height="400"></canvas>
+    <div class="container">
+      <form class="form-signin">
+        <button onclick="window.location.href='/student'" class="btn btn-lg btn-primary btn-block" type="button">Student Login</button>
+        <button onclick="window.location.href='/teacher'" class="btn btn-lg btn-primary btn-block" type="button">Teacher Login</button>
+      </form>
+    </div>
     <script src="/config/config.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.2/socket.io.js" type="text/javascript"></script>
     <script src="/node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
-    <script src="public/bundle.js" type="text/javascript"></script>
     <script></script>
   </body>
 </html>
