--- a/teacher/index.html
+++ b/teacher/index.html
@@ -11,10 +11,11 @@
     <div id="app" />
     <canvas id="myChart" width="400" height="400"></canvas>
     <script src="/config/config.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.2/socket.io.js" type="text/javascript"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.2/socket.io.js" type="text/javascript"></script> -->
     <script src="/node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
     <script src="public/bundle.js" type="text/javascript"></script>
-    <script></script>
+    <script>
+    </script>
   </body>
 </html>
