--- a/teacher/index.html
+++ b/teacher/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css"/>
+    <script src="https://use.fontawesome.com/f667a3bcc8.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css"/>
     <title>Math Dojo</title>
   </head>
@@ -14,6 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.2/socket.io.js" type="text/javascript"></script>
     <script src="/node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
+    <script src="https://use.fontawesome.com/f667a3bcc8.js"></script>
     <script src="public/bundle.js" type="text/javascript"></script>
     <script></script>
   </body>
